# transcript-kokous

./: .gitignore  CLEANUP.md  README.md  pyproject.toml
kirjuri/: __main__.py  block.py  load.py  processor.py  raw.py  timestamp.py  transcript.py  video.py
